improved the way that assets are copied
- Improves the speed by 1.75s
  - Adds the ability to account for files that're added after the watch begins

--- a/packages/docs-theme-default/public/_helpers/json.jade
+++ b/packages/docs-theme-default/public/_helpers/json.jade
@@ -1,5 +1,5 @@
 pre(class="c-code-block")
-  code!= JSON.stringify(json, null, 2)
+  code= JSON.stringify(json, null, 2)
 
 //- mixin json(obj, spacing)
 //-   //- - var type = highlight_types[utils.random(0, highlight_types.length)]
