updated the default theme, and annotations

--- a/packages/docs-plugin-default-annotations/public/_annotations/markup.jade
+++ b/packages/docs-plugin-default-annotations/public/_annotations/markup.jade
@@ -1,3 +1,11 @@
 div(class="c-annotation c-annotation--markup")
   h4 Markup
-  != partial('../_helpers/json', { json: data })
+  if token && token.states
+    - var cls 
+    - var ids = _.keys(token.states)
+    - data = _.isArray(data) ? data : [ data ]
+    each markup in data
+      if ids.indexOf(markup.id) < 0
+        != partial('../_helpers/frame', { data: markup })
+  else
+    != partial('../_helpers/frame', { data: data })
