--- a/packages/docs-theme-default/public/_layout/header.jade
+++ b/packages/docs-theme-default/public/_layout/header.jade
@@ -6,10 +6,10 @@ header(class="s-header o-container")
       input(class="js-settings__setting" type="checkbox" value="state")
     label(class="c-settings__designer")
       | designer
-      input(class="js-settings__setting" type="checkbox" value="designer")
+      input(class="js-settings__setting" type="checkbox" value="designer", checked)
     label(class="c-settings__developer")
       | developer
-      input(class="js-settings__setting" type="checkbox" value="developer")
+      input(class="js-settings__setting" type="checkbox" value="developer", checked)
 
   //- fieldset(class="c-search js-search")
   //-   input(class="c-search js-search__input", placeholder="search this shit")
