--- a/packages/docs-theme-default/public/styles/tools/_variables.styl
+++ b/packages/docs-theme-default/public/styles/tools/_variables.styl
@@ -34,16 +34,16 @@ color-set({
 /// @markup {styl}
 /// .foo
 ///   border-radius $config.border-radius
-$spacing = 1.45em;
+$spacing = 1em;
 $config = {
-  'border-radius': 6px,
+  'border-radius': 0.4em,
   'border-color': #fff,
   'color': blue,
   'border-color': color(a, -6),
   'color': color(a, 2),
   'font-family': unquote('Source Sans Pro, Helvetica, Arial, sans-serif'),
-  'font-size': 14px,
-  'line-height': $spacing,
+  'font-size': 16px,
+  'line-height': $spacing + 0.45em,
   'spacing': $spacing,
   'spacing-sizes': {
     'off': 0,
