--- a/packages/docs-plugin-default-annotations/public/_annotations/alias.jade
+++ b/packages/docs-plugin-default-annotations/public/_annotations/alias.jade
@@ -1,3 +1,3 @@
 div(class="c-annotation c-annotation--alias")
   h4 Alias
-  != partial('../_helpers/json', { json: data })
+  != partial('../_helpers/code-list', { data: data })
