--- a/packages/docs-plugin-default-annotations/public/_annotations/arg.jade
+++ b/packages/docs-plugin-default-annotations/public/_annotations/arg.jade
@@ -1,3 +1,3 @@
 div(class="c-annotation c-annotation--arg")
-  h4 Arg
-  != partial('../_helpers/json', { json: data })
+  h4 Parameters
+  != partial('../_helpers/table', { data: data })
