--- a/packages/docs-plugin-default-annotations/public/_annotations/author.jade
+++ b/packages/docs-plugin-default-annotations/public/_annotations/author.jade
@@ -1,3 +1,5 @@
 div(class="c-annotation c-annotation--author")
   h4 Author
-  != partial('../_helpers/json', { json: data })
+  ul
+    each author in data
+      li= author
