--- a/packages/docs-plugin-default-annotations/public/_annotations/chainable.jade
+++ b/packages/docs-plugin-default-annotations/public/_annotations/chainable.jade
@@ -1,3 +1,3 @@
 div(class="c-annotation c-annotation--chainable")
   h4 Chainable
-  != partial('../_helpers/json', { json: data })
+  != partial('../_helpers/code-list', { data: data })
