--- a/packages/docs-plugin-default-annotations/public/_annotations/deprecated.jade
+++ b/packages/docs-plugin-default-annotations/public/_annotations/deprecated.jade
@@ -1,3 +1,4 @@
 div(class="c-annotation c-annotation--deprecated")
   h4 Deprecated
-  != partial('../_helpers/json', { json: data })
+  div.c-message.c-message--alert
+    != data.version + ' &mdash; ' + data.description
