--- a/packages/docs-plugin-default-annotations/public/_annotations/name.jade
+++ b/packages/docs-plugin-default-annotations/public/_annotations/name.jade
@@ -1,7 +1,10 @@
-//- - var id = encode(arg)
-- var id = 1
-h1(
+- var size = { header: 'h1', body: 'h2', inline: 'h4' }
+
+#{size[token.blockinfo.comment.type]}(
   class="c-annotation c-annotation--name",
-  id="name-#{id}"
+  id="#{id}"
 )
-  a(class="c-link-to js-link-to", href="#name-#{id}")= data
+  if token.access !== 'public'
+    span(class='c-annotation c-annotation--access') [Private] 
+  
+  a(class="c-link-to js-link-to", href="##{id}")= data
