--- a/packages/docs-plugin-default-annotations/public/_annotations/readonly.jade
+++ b/packages/docs-plugin-default-annotations/public/_annotations/readonly.jade
@@ -1,3 +1,4 @@
-div(class="c-annotation c-annotation--readonly")
-  h4 Readonly
-  != partial('../_helpers/json', { json: data })
+if data != false
+  div(class="c-annotation c-annotation--readonly")
+    h4 Readonly
+    != partial('../_helpers/json', { json: data })
