--- a/packages/docs-plugin-default-annotations/public/_annotations/requires.jade
+++ b/packages/docs-plugin-default-annotations/public/_annotations/requires.jade
@@ -1,3 +1,3 @@
 div(class="c-annotation c-annotation--requires")
   h4 Requires
-  != partial('../_helpers/json', { json: data })
+  != partial('../_helpers/table', { data: data })
