--- a/packages/docs-plugin-default-annotations/public/_annotations/since.jade
+++ b/packages/docs-plugin-default-annotations/public/_annotations/since.jade
@@ -1,3 +1,4 @@
 div(class="c-annotation c-annotation--since")
   h4 Since
-  != partial('../_helpers/json', { json: data })
+  div.c-message.c-message--info
+    != data.version + ' &mdash; ' + data.description
