--- a/packages/docs-plugin-default-annotations/public/_annotations/throws.jade
+++ b/packages/docs-plugin-default-annotations/public/_annotations/throws.jade
@@ -1,3 +1,3 @@
 div(class="c-annotation c-annotation--throws")
   h4 Throws
-  != partial('../_helpers/json', { json: data })
+  != partial('../_helpers/table', { data: data })
