--- a/packages/docs-plugin-default-annotations/public/_annotations/type.jade
+++ b/packages/docs-plugin-default-annotations/public/_annotations/type.jade
@@ -1,3 +1,4 @@
 div(class="c-annotation c-annotation--type")
   h4 Type
-  != partial('../_helpers/json', { json: data })
+  != partial('../_helpers/code-list', { data: data.type })
+  != data.description
