--- a/packages/docs-theme-default/public/styles/utilities/_loading.styl
+++ b/packages/docs-theme-default/public/styles/utilities/_loading.styl
@@ -77,5 +77,9 @@
     left 50%
     margin -0.5em
 
-  &--huge:before
-    font-size 50px
+  &--huge
+    min-height 50px
+    min-width 50px
+
+    &:before
+      font-size 50px
