--- a/packages/docs-theme-default/public/_helpers/frame.jade
+++ b/packages/docs-theme-default/public/_helpers/frame.jade
@@ -5,21 +5,22 @@ else if _.isArray(data.items)
   - var items = data.items
   - delete data.items
   each item in items
-    - var result = { data: _.assign({}, data, _.isPlainObject(item) ? item : { raw: item, escaped: _.escape(item) }) }
-    != partial('frame', result)
+    if !_.isPlainObject(item) 
+      - item = { raw: item, escaped: _.escape(item) }
+    != partial('frame', { data: _.assign({}, data, item ) })
 else
   - var cls = 'c-frame'
   - var js = 'js-frame'
-  - var modifier = data.modifier ? cls + data.modifier : '' 
-  - data = Object.prototype.toString.call(data) !== '[object Object]' ? { raw: data, escaped: _.escape(data) } : data
+  - data = !_.isPlainObject(data) ? { raw: data, escaped: _.escape(data) } : data
   - var lang = data.language || data.lang || 'json'
   - var blockinfo = (token || {}).blockinfo || {}
   - var file_path = (blockinfo.file || {}).path
   - var description = data.description
   - data.settings = data.settings || {}
-  - data.settings.class = data.settings.class ? data.settings.class.replace(/\s*\./g, ' ') : ''
+  if data.settings.class
+    - data.settings.class = data.settings.class ? data.settings.class.replace(/\s*\./g, ' ') : ''
   - var code = blockinfo.code || {}
-  - var keys = Object.keys(data).filter(function(item) {
+  - var keys = _.keys(data).filter(function(item) {
   -   return [ 'raw', 'escaped', 'raw_stateless', 'escaped_stateless' ].indexOf(item) > -1
   - })
   - var id = 'markup-item' + global.base_x.encode(data)
@@ -42,12 +43,12 @@ else
       div(class='#{cls}__body')
         each type in keys
           - var should_highlight = type.indexOf('escaped') > -1
-          - var content = data[type.replace('escaped', 'raw')] || data[type] ||  false
-          - var loading =  should_highlight ? '' : 'u-loading u-loading--middle u-loading--huge is-loading'
+          - var content = data[type] ||  false
+          - var loading =  should_highlight ? '' : 'u-loading u-loading--middle u-loading--huge js-iframify-parent is-loading'
           - type = type.replace('_', '-')
           if content
             div(
-              class="#{cls}__section #{cls}__section--#{type} #{js}__section #{loading}", 
+              class="#{cls}__section #{cls}__section--#{type} #{loading} #{js}__section", 
               data-type="#{type}",
               data-language="#{lang}"
             )
@@ -58,7 +59,10 @@ else
                 - options.lineno = true
                 - options.start = code.start || 1
                 - options.language = lang
-                != global.highlight(content, options)
+                != global.highlight(_.unescape(content), options)
               else
                 div.u-lazy.u-lazy--fade.js-iframify
                   = partial('../iframe', { data: content })
+
+//- if token.blockinfo.comment.type === 'body'
+//-   != partial('../_helpers/json', { json: token })
