--- a/packages/docs-theme-default/public/_layout/annotation.jade
+++ b/packages/docs-theme-default/public/_layout/annotation.jade
@@ -1,7 +1,7 @@
-mixin annotations(type, token)
+mixin annotations(type, token, parent)
   if Array.isArray(token)
     each item in token
-      +annotations(type, item)
+      +annotations(type, item, parent)
   else
     - var elem = type === 'header' ? 'header' : 'section'
     - var cls = 'c-token-' + type
@@ -12,16 +12,17 @@ mixin annotations(type, token)
     #{elem}(class="#{cls}")
       each data, name in token
         if name === 'inline'
-          +annotations('inline', token.inline)
+          - const parent = _.clone(token)
+          - delete parent.inline
+          +annotations('inline', token.inline, parent)
         else
-          +annotation(name, data, token)
+          +annotation(name, data, token, parent)
 
-mixin annotation(name, data, token)
+mixin annotation(name, data, token, parent)
   if name !== 'blockinfo' && name !== 'inline'
     - var filepath = token && token.blockinfo ? token.blockinfo.file.path : ''
     - var id = name + '-' + global.base_x.encode(JSON.stringify(data) + filepath)
-    //- if name === 'raw-code'
-    != partial('../_annotations/' + name, { data: data, token: token || {}, id: id })
+    != partial('../_annotations/' + name, { data: data, token: token || {}, parent: parent || {}, id: id })
 
 article.docs-o-container
   if header && Object.keys(header).length
